--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <!-- Add Bootstrap CSS for easy styling and interactivity -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
-<body>
+<body><!-- Beginner-friendly: JavaScript inside HTML -->
+<script>
+  // This is a simple JavaScript alert
+  alert('Hello, world!');
+</script>
   <!-- Navigation bar: Simple F1-style navigation -->
   <nav class="navbar">
     <!-- Logo or site name -->
