--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
   <!-- Add Bootstrap CSS for easy styling and interactivity -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 </head>
-<body><!-- Beginner-friendly: JavaScript inside HTML -->
-<script>
-  // This is a simple JavaScript alert
-  alert('Hello, world!');
-</script>
+<body>
   <!-- Navigation bar: Simple F1-style navigation -->
   <nav class="navbar">
     <!-- Logo or site name -->
@@ -271,5 +267,7 @@
 
   <!-- Add Bootstrap JS for interactive components (like modals, dropdowns, etc.) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Link to your external JavaScript file for organized code -->
+  <script src="script.js/script.js"></script>
 </body>
 </html>
