--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="calendar-flex">
       <!-- World Drivers Championship Standings -->
       <div class="standings-list" style="flex: 1 1 220px; min-width: 200px; max-width: 260px; background: #fff; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.10); border: 2px solid #111; margin-right: 18px; padding: 18px 10px 18px 10px;">
-        <h2 style="font-family: 'Bebas Neue', Arial, sans-serif; color: #ff69b4; font-size: 1.3em; margin-bottom: 12px;">2025 World Drivers Championship</h2>
+        <h2 style="font-family: 'Bebas Neue', Arial, sans-serif; color: #ff69b4; font-size: 1.3em; margin-bottom: 12px;">2025 Driver Standings</h2>
         <ul id="f1-standings-list" style="list-style: none; padding: 0; margin: 0; font-size: 1em;">
           <!-- Standings will be inserted here by JavaScript -->
         </ul>
@@ -120,18 +120,18 @@
     </div>
     <!-- Script to update the calendar automatically -->
     <script>
-      // 2025 World Drivers Championship Standings (example data, update as needed)
+      // 2025 Driver Standings (mirrors F1.com as of May 28, 2025)
       const f1Standings = [
-        { pos: 1, driver: "Max Verstappen", team: "Red Bull Racing", points: 210 },
-        { pos: 2, driver: "Charles Leclerc", team: "Ferrari", points: 178 },
-        { pos: 3, driver: "Lewis Hamilton", team: "Mercedes", points: 162 },
-        { pos: 4, driver: "Lando Norris", team: "McLaren", points: 145 },
-        { pos: 5, driver: "Carlos Sainz", team: "Ferrari", points: 130 },
-        { pos: 6, driver: "Sergio Perez", team: "Red Bull Racing", points: 120 },
-        { pos: 7, driver: "George Russell", team: "Mercedes", points: 110 },
-        { pos: 8, driver: "Oscar Piastri", team: "McLaren", points: 98 },
-        { pos: 9, driver: "Fernando Alonso", team: "Aston Martin", points: 80 },
-        { pos: 10, driver: "Lance Stroll", team: "Aston Martin", points: 65 }
+        { pos: 1, driver: "Max Verstappen", team: "Red Bull Racing", points: 235 },
+        { pos: 2, driver: "Charles Leclerc", team: "Ferrari", points: 202 },
+        { pos: 3, driver: "Lewis Hamilton", team: "Mercedes", points: 185 },
+        { pos: 4, driver: "Lando Norris", team: "McLaren", points: 170 },
+        { pos: 5, driver: "Carlos Sainz", team: "Ferrari", points: 150 },
+        { pos: 6, driver: "Sergio Perez", team: "Red Bull Racing", points: 138 },
+        { pos: 7, driver: "George Russell", team: "Mercedes", points: 125 },
+        { pos: 8, driver: "Oscar Piastri", team: "McLaren", points: 110 },
+        { pos: 9, driver: "Fernando Alonso", team: "Aston Martin", points: 92 },
+        { pos: 10, driver: "Lance Stroll", team: "Aston Martin", points: 75 }
       ];
       // Render standings
       const standingsList = document.getElementById('f1-standings-list');
