--- a/index.html
+++ b/index.html
@@ -265,6 +265,33 @@
     </script>
   </section>
 
+  <!-- Fun JavaScript: Animated F1 Car Button -->
+  <div style="text-align:center; margin: 32px 0;">
+    <!-- Button to start the car animation -->
+    <button id="car-btn" class="btn btn-danger" style="font-size:1.1em; font-family: 'Bebas Neue', Arial, sans-serif;">Start the F1 Car!</button>
+    <!-- The car emoji will move across the screen -->
+    <div id="car-track" style="position:relative; height:60px; width:100%; max-width:600px; margin: 18px auto 0 auto; background:#222; border-radius:30px; overflow:hidden;">
+      <span id="f1-car" style="position:absolute; left:0; top:10px; font-size:2.5em; transition:left 1s;">🏎️💨</span>
+    </div>
+  </div>
+  <script>
+    // Simple F1 car animation for beginners
+    // When the button is clicked, the car moves across the track
+    const carBtn = document.getElementById('car-btn');
+    const car = document.getElementById('f1-car');
+    const track = document.getElementById('car-track');
+    let carPosition = 0;
+    carBtn.addEventListener('click', function() {
+      // Move the car to the right by 100px each click
+      carPosition += 100;
+      // Limit the car so it doesn't go off the track
+      const maxPosition = track.offsetWidth - car.offsetWidth - 10;
+      if (carPosition > maxPosition) carPosition = 0; // Reset to start
+      car.style.left = carPosition + 'px';
+    });
+    // Add a comment: This is a fun way to practice DOM and events!
+  </script>
+
   <!-- Add Bootstrap JS for interactive components (like modals, dropdowns, etc.) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Link to your external JavaScript file for organized code -->
