Refactor layout styles for main content, portfolio, and F1 calendar sections to improve alignment

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </section>
 
   <!-- Main content: Bio and Skills side by side on large screens -->
-  <div class="main-content">
+  <div class="main-content" style="text-align: right;">
     <!-- Bio section: A short introduction about yourself -->
     <section class="bio" id="bio">
       <h2>About Me</h2>
@@ -86,21 +86,14 @@
   </div>
 
   <!-- Portfolio section: Placeholder for your future projects -->
-  <section class="portfolio" id="portfolio">
+  <section class="portfolio" id="portfolio" style="text-align: right;">
     <h2>My Projects</h2>
     <p>Check back soon to see the projects I create during my course!</p>
   </section>
 
   <!-- Combined 2025 Formula 1 Calendar Section (Next 4 Weeks + Full Season) with Standings -->
-  <section class="f1-calendar-banner" style="margin-bottom: 32px;">
+  <section class="f1-calendar-banner" style="margin-bottom: 32px; text-align: right;">
     <div class="calendar-flex">
-      <!-- World Drivers Championship Standings -->
-      <div class="standings-list" style="flex: 1 1 220px; min-width: 200px; max-width: 260px; background: #fff; border-radius: 10px; box-shadow: 0 2px 8px rgba(0,0,0,0.10); border: 2px solid #111; margin-right: 18px; padding: 18px 10px 18px 10px;">
-        <h2 style="font-family: 'Bebas Neue', Arial, sans-serif; color: #ff69b4; font-size: 1.3em; margin-bottom: 12px;">2025 Driver Standings</h2>
-        <ul id="f1-standings-list" style="list-style: none; padding: 0; margin: 0; font-size: 1em;">
-          <!-- Standings will be inserted here by JavaScript -->
-        </ul>
-      </div>
       <div class="calendar-list" style="flex: 1 1 320px; min-width: 220px;">
         <h2>2025 Formula 1 Calendar</h2>
         <!-- Interactive calendar: will update automatically to show next 4 races -->
