--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 </head>
 <body>
   <!-- Navigation bar: Simple F1-style navigation -->
-  <nav class="navbar">
+  <nav class="navbar" style="background-color: #333; color: #fff; padding: 10px;">
     <!-- Logo or site name -->
-    <div class="navbar-logo">
+    <div class="navbar-logo" style="font-size: 1.5em; font-weight: bold;">
       <!-- You can use an image or just text for your logo -->
-      <span class="site-title">My Personal Portfolio</span>
+      <span class="site-title">My Personal Garage</span>
     </div>
     <!-- Navigation links -->
-    <ul class="navbar-links">
-      <li><a href="#hero">Home</a></li>
-      <li><a href="#bio">About</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#portfolio">Projects</a></li>
+    <ul class="navbar-links" style="list-style: none; display: flex; gap: 15px; margin: 0; padding: 0;">
+      <li><a href="#hero" style="color: #fff; text-decoration: none;">Home</a></li>
+      <li><a href="#bio" style="color: #fff; text-decoration: none;">About</a></li>
+      <li><a href="#skills" style="color: #fff; text-decoration: none;">Skills</a></li>
+      <li><a href="#portfolio" style="color: #fff; text-decoration: none;">Projects</a></li>
     </ul>
   </nav>
 
