--- a/index.html
+++ b/index.html
@@ -31,10 +31,29 @@
   <!-- Hero section: This is the top part of your website -->
   <section class="hero" id="hero" style="text-align: center;">
     <!-- Main header with racing font -->
-    <h1 class="paddock-header">Welcome To my Paddock</h1>
+    <h1 class="paddock-header animated-header">Welcome To my Paddock</h1>
     <!-- Strong subheader below the main header -->
-    <h2 class="paddock-subheader">Driven by Code. Inspired by Speed.</h2>
+    <h2 class="paddock-subheader animated-subheader">Driven by Code. Inspired by Speed.</h2>
   </section>
+  <style>
+    /* Simple fade-in and slide-down animation for hero section */
+    .animated-header {
+      opacity: 0;
+      transform: translateY(-40px);
+      animation: fadeSlideDown 1.2s ease-out forwards;
+    }
+    .animated-subheader {
+      opacity: 0;
+      transform: translateY(-20px);
+      animation: fadeSlideDown 1.2s 0.7s ease-out forwards;
+    }
+    @keyframes fadeSlideDown {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
 
   <!-- Main content: Bio and Skills side by side on large screens -->
   <div class="main-content" style="text-align: left;">
